Bug 287817 - .deb file not download, instead screen garbage appears
Summary: .deb file not download, instead screen garbage appears
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (show other bugs)
Version: 0.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
: 196167 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-29 08:23 UTC by m.wege
Modified: 2011-12-22 02:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.7.4


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-11-29 08:23:50 UTC
Version:           0.0.1 (using KDE 4.7.2) 
OS:                Linux

When I attempt to download http://download.learnfree.eu/ubuntu-packages/live-usb-install-2.3.2-all.deb the screen shows garbage instead of downloading the file. The download works correctly in Firefox. I have also checked file associations, there is an association to x-deb to Gdebi, Kpackagekit and ark, which obviously does not work. The problem also occurs with akregator and rekonq, so I assume it is related to an underlying component of KDE.

Reproducible: Always

Steps to Reproduce:
see above

Actual Results:  
see above

Expected Results:  
the deb should be downloaded.
Comment 1 Tommi Tervo 2011-11-29 10:00:42 UTC
Web server is broken:
 wget -S http://download.learnfree.eu/ubuntu-packages/live-usb-install-2.3.2-all.deb
--2011-11-29 11:59:02--  http://download.learnfree.eu/ubuntu-packages/live-usb-install-2.3.2-all.deb
Resolving download.learnfree.eu... 87.120.40.128
Connecting to download.learnfree.eu|87.120.40.128|:80... connected.
HTTP request sent, awaiting response... 
  HTTP/1.1 200 OK
  Date: Tue, 29 Nov 2011 09:59:37 GMT
  Server: Apache/1.3.41 (Unix) PHP/4.4.8 mod_ssl/2.8.31 OpenSSL/0.9.8g
  Last-Modified: Sat, 15 Oct 2011 14:52:56 GMT
  ETag: "2dca084-550298-4e999e48"
  Accept-Ranges: bytes
  Content-Length: 5571224
  Connection: close
  Content-Type: text/plain
Comment 2 m.wege 2011-11-29 10:08:24 UTC
Just saw it myself. But still Firefox is able to handle it and deal with that wrong content-types. Would be cool, if Konqueror would be able too.
Comment 3 Blagovest Zlatev 2011-11-29 13:56:40 UTC
I couldn't reproduce the bug and no duplicates were found. I downloaded the file  with no problems at all in Konquerer.
Comment 4 m.wege 2011-11-29 13:59:21 UTC
I am using Natty with KDE 4.72
Comment 5 Blagovest Zlatev 2011-11-29 14:07:49 UTC
I couldn't reproduce the bug and no duplicates were found. I downloaded the file  with no problems at all in Konquerer.
Comment 6 Myriam Schweingruber 2011-12-02 09:12:01 UTC
Please file a wish about the handling of unavailable downloads, this would need to be implemented.
Comment 7 Dawit Alemayehu 2011-12-02 18:14:00 UTC
Git commit e435c7ab5c631fecb395a106425db96dce80e768 by Dawit Alemayehu.
Committed on 01/12/2011 at 19:10.
Pushed by adawit into branch 'KDE/4.7'.

Workaround yet another broken server that sends the wrong mime-type.

BUG: 287817
FIXED-IN: 4.7.4

M  +2    -0    kioslave/http/http.cpp

http://commits.kde.org/kdelibs/e435c7ab5c631fecb395a106425db96dce80e768
Comment 8 Dawit Alemayehu 2011-12-22 02:40:14 UTC
*** Bug 196167 has been marked as a duplicate of this bug. ***