Workaround yet another broken server that sends the wrong mime-type.

BUG: 287817
FIXED-IN: 4.7.4